k3s/11-metabase-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: metabase-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /metabase
