k3s/09-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plotlisting-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api/listings(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: listing-service
            port:
              number: 6000
      - path: /api/analytics(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: analytics-service
            port:
              number: 6001
