k3s/12-metabase-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-metabase-stripprefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - path: /metabase
        pathType: ImplementationSpecific
        backend:
          service:
            name: metabase-service
            port:
              number: 3000
